--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,8 @@
     </form>
     <div id="quiz"></div>
     <button id="submit">Get Results</button>
-    <button id="tryAgin">Try Agin</button>
+    <div id="tryAgin" class="try_agin"></div>
+    
     <div id="results"></div>
     <script src="dashboard.js"></script>
 
