--- a/loging.html
+++ b/loging.html
@@ -33,12 +33,16 @@
                                     </div>
                                     <input type="submit" value="Login" class="guessSubmit">
                                 </form>
+                                <form action="registor.html"> 
+                                    <input type="submit" name=""  class="guessSubmit" value="goBack" /><br />
+                                </form>
                             </div>
 
                         </div>
                     </div>
                 </div>
                 <div class="col">
+                   
                 </div>
             </div>
         </div>
