--- a/dashboard.html
+++ b/dashboard.html
@@ -11,28 +11,36 @@
 
 <body>
     <nav class="navbar navbar-light bg-info justify-content-between">
+        <div id="count" class="text-white">Start</div>
         <h3 class="navbar-brand" id="username" class="text-white"></h3>
+
+
         <form class="form-inline" action="loging.html">
-         
-                <input type="submit" name="" class="bg-info text-white p-1" value="Logout" /><br />
-           
+
+            <input type="submit" name="" class="bg-info text-white p-1" value="Logout" /><br />
+
         </form>
     </nav>
     <div class="body-align">
         <div class="row">
+            <div id="number"> Question 1</div>
+
             <div class="col">
+
                 <div id="quiz"></div>
                 <button id="submit">Get Results</button>
+                <button id="previous">Previous</button>
+                <button id="next">Next </button>
             </div>
             <div class="col">
                 <div id="tryAgin" class="try_agin"></div>
+                <div id="correction"></div>
+                <div id="answer"></div>
                 <div id="results"></div>
             </div>
         </div>
-        <script src="dashboard.js"></script>
     </div>
-
-
+<script src="dashboard.js"></script>
 </body>
 
 </html>
