--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
             <div class="col">
 
                 <div id="quiz"></div>
-                <button id="submit">Get Results</button>
+                <button id="submit">Submit</button>
                 <button id="previous">Previous</button>
                 <button id="next">Next </button>
             </div>
