--- a/loging.html
+++ b/loging.html
@@ -34,7 +34,7 @@
                                     <input type="submit" value="Login" class="guessSubmit">
                                 </form>
                                 <form action="registor.html"> 
-                                    <input type="submit" name=""  class="guessSubmit" value="goBack" /><br />
+                                    <input type="submit" name=""  class="guessSubmit" value="Go To Register" /><br />
                                 </form>
                             </div>
 
