--- a/registor.html
+++ b/registor.html
@@ -34,7 +34,7 @@
                     <input type="password" class="form-control" id="password" placeholder="Password *" value="" />
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Registor"  class=" register-button" />
+                    <input type="submit" value="Register"  class=" register-button" />
                 </div>
             </form>
 
