--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dashboard.css">
 </head>
 
-<body>
+<body class="banner">
     <nav class="navbar navbar-light bg-info justify-content-between">
         <div id="count" class="text-white">Start</div>
         <h3 class="navbar-brand" id="username" class="text-white"></h3>
