--- a/registor.html
+++ b/registor.html
@@ -12,35 +12,46 @@
 </head>
 
 <body>
-    <div class="container register">
-        <div class="row ">
-            <div class="col-md-3 register-left">
-                <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
-                <h3>Welcome</h3>
-                <form action="loging.html"> 
-                    <input type="submit" name=""  value="Login" /><br />
-                </form>
-            </div>
-            <div class="col-md-6 register-form ">
-                <form name="registorForm" class="login_form" method="post" action="loging.html" onsubmit="return registorSumbit()">
+    <section class="login-blk">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 login">
+                    <h2 class="text-center">Register Now</h2>
+                    <form name="registorForm" class="login_form" method="post" action="loging.html"
+                        onsubmit="return registorSumbit()">
 
-                <div class="form-group">
-                    <input type="text" class="form-control" id="firstName" placeholder="First Name *" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="userName" placeholder="User Name *" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="password" placeholder="Password *" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Register"  class=" register-button" />
-                </div>
-            </form>
+                        <div class="form-group">
+                            <label>First Name</label>
+                            <input type="text" class="form-control" id="firstName" placeholder="First Name *"
+                                value="" />
 
+                        </div>
+                        <div class="form-group">
+                            <label>User Name</label>
+                            <input type="text" class="form-control" id="userName" placeholder="User Name *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Password *"
+                                value="" />
+                        </div>
+
+                        <div class="form-group">
+                            <input class="btn btn-primary" type="submit" value="Register"></button>&nbsp;
+
+                        </div>
+                    </form>
+                    <form action="loging.html">
+                        <input type="submit" class="btn btn-info" name="" value="GoToLogin" /><br />
+                    </form>
+                </div>
+                <div class="col-md-8 banner">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
